<resources>
    <string name="app_name">SettingsExample</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>
    <string name="pref_show_false">Hidden</string>
    <string name="pref_show_true">Shown</string>

    <string name="pref_color_label">Shape Color</string>

    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <string name="pref_color_key" translatable="false">color</string>

    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>

    <string name="pref_size_label">Size</string>
    <string name="pref_size_default" translatable="false">5</string>
    <string name="pref_size_key" translatable="false">pref_size</string>
</resources>
