<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Section 1">
        <CheckBoxPreference
            android:defaultValue="true"
            android:summaryOff="Hidden"
            android:summaryOn="Shown"
            android:title="@string/pref_show_bass_label"
            app:key="@string/pref_show_bass_key"></CheckBoxPreference>

        <ListPreference
            android:defaultValue="@string/pref_color_label_red"
            android:entries="@array/pref_color_option_labels"
            android:entryValues="@array/pref_color_option_values"
            android:key="@string/pref_color_key"
            android:title="@string/pref_color_label"></ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="Section 2">
        <EditTextPreference
            android:defaultValue="@string/pref_size_default"
            android:key="@string/pref_size_key"
            android:title="@string/pref_size_label">

        </EditTextPreference>
    </PreferenceCategory>


</PreferenceScreen>